doc: L127 update comments